# mcp-server-shortcut-fastmcp

./: .env.example  .gitignore  README.md  pyproject.toml  server.py  shortcut_client.py
